<?xml version="1.0"?>
<package format="2">
  <name>ublox_f9p</name>
  <version>0.0.0</version>
  <description>ROS2 driver for u-blox F9P</description>
  <maintainer email="jakub@kaflik.pl">Jakub Kaflik</maintainer>
  <license>MIT</license>

  <url type="website">https://github.com/jkaflik/ublox_f9p</url>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>robot_localization</depend>
  <depend>rtcm_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>serial_driver</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
